fix dots not visible

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -1564,7 +1564,7 @@ nav
 	padding: 0.5rem 0.75rem;
 	margin-left: -1px;
 	line-height: 1.25;
-	color: var(--primary);
+	color: var(--primary) !important;
 	background-color: #fff;
 	border: 1px solid #dee2e6;
 }
